# cloudflare-dns-updater

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yaml  cloudflare_client.py  config.py  config.yaml.example  main.py  pyproject.toml  updater.py
.github/workflows/: publish.yml
tests/: conftest.py  test_config.py  test_main.py  test_updater.py
